tests/baselines/reference/typeParametersShouldNotBeEqual.errors.txt
typeParametersShouldNotBeEqual.ts(4,5): error TS2322: Type 'U' is not assignable to type 'T'.
  'T' could be instantiated with an arbitrary type which could be unrelated to 'U'.
typeParametersShouldNotBeEqual.ts(5,5): error TS2322: Type 'Object' is not assignable to type 'T'.
  'T' could be instantiated with an arbitrary type which could be unrelated to 'Object'.
typeParametersShouldNotBeEqual.ts(5,9): error TS2454: Variable 'z' is used before being assigned.
typeParametersShouldNotBeEqual.ts(6,5): error TS2322: Type 'T' is not assignable to type 'Object'.


==== typeParametersShouldNotBeEqual.ts (4 errors) ====
    function ff<T, U>(x: T, y: U) {
        var z: Object;
        x = x;  // Ok
        x = y;  // Error
        ~
!!! error TS2322: Type 'U' is not assignable to type 'T'.
!!! error TS2322:   'T' could be instantiated with an arbitrary type which could be unrelated to 'U'.
!!! related TS2208 typeParametersShouldNotBeEqual.ts:1:16: This type parameter might need an `extends T` constraint.
        x = z;  // Error
        ~
!!! error TS2322: Type 'Object' is not assignable to type 'T'.
!!! error TS2322:   'T' could be instantiated with an arbitrary type which could be unrelated to 'Object'.
            ~
!!! error TS2454: Variable 'z' is used before being assigned.
        z = x;  // Ok
        ~
!!! error TS2322: Type 'T' is not assignable to type 'Object'.
!!! related TS2208 typeParametersShouldNotBeEqual.ts:1:13: This type parameter might need an `extends Object` constraint.
    }
    